# TrainSystem

./: .gitignore  CMakeLists.txt  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  passengertrafficvolume.cpp  passengertrafficvolume.h  route.cpp  route.h  station.cpp  station.h  train.cpp  train.h  user.cpp  user.h
.cache/clangd/index/: loginwindow.cpp.D6B70F1E28A94C80.idx  loginwindow.h.6CD4E0D733273F96.idx  main.cpp.8DDC32D09822190E.idx  mainwindow.cpp.5FABEA3E647A738A.idx  mainwindow.h.3319A875904E8A2F.idx  user.cpp.7472847F2681BE2E.idx  user.h.CA5CA6BDDB31948C.idx
data/: route.csv  station.csv  train.csv  user.csv
